[tool.poetry]
name = "at-krl"
version = "1.0.8"
description = ""
authors = ["grigadnal625 <grigandal625@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
antlr4-python3-runtime = "^4.13.2"
pydantic = "^2.10.6"
pydantic-xml = "^2.14.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
